[package]
name = "xqr-cli"
version = "0.1.0"
edition = "2021"
description = "eXtended QR Codes CLI"
homepage = "https://cli.xqr.dev"
repository = "https://github.com/xqr-dev/xqr-cli"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["secure", "qr", "code", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.21"
qrcode = "0.12.0"
image = "0.24.7"
xqr = "0.2.0"
